--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -11,14 +11,14 @@
         <ul class="orders">
             <% orders.forEach(order => { %>
             <li class="orders__item">
-                <h1>Order - #<%= order._id %></h1>
+                <h1>Order - # <%= order._id %></h1>
                 <ul class="orders__products">
-                    <% order.products.forEach(item => { %>
-                    <li class="orders__products-item"><%= item.productData.title %> (<%= item.quantity %>)</li>
-                    <% }) %>
+                    <% order.products.forEach(p => { %>
+                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
+                    <% }); %>
                 </ul>
             </li>
-            <% }) %>
+            <% }); %>
         </ul>
         <% } %>
     </main>
