--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -29,10 +29,7 @@
             </article>
             <% } %>
         </div>
-        <section class="pagination">
-            <a href="/?page=1">1</a>
-            <a href="/?page=2">2</a>
-        </section>
+        <%- include('../includes/pagination.ejs', {currentPage, prevPage, nextPage, hasPrevPage, hasNextPage, lastPage}) %>
         <% } else { %>
         <h1>No Products Found!</h1>
         <% } %>
