--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -34,6 +34,7 @@
             </article>
             <% } %>
         </div>
+        <%- include('../includes/pagination.ejs', {currentPage, prevPage, nextPage, hasPrevPage, hasNextPage, lastPage}) %>
         <% } else { %>
         <h1>No Products Found!</h1>
         <% } %>
